<resources>
    <string name="app_name">Hitrash</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="hikingGroup">Hiking Group</string>
    <string name="hikingTrail">Hiking Trails</string>
    <string name="clean">Clean</string>
...
